--- a/Exp 7/style.css
+++ b/Exp 7/style.css
@@ -1,53 +1,46 @@
+
 body{
-    margin: 0px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    background-color: rgb(250, 250, 250);
-}
-
-h1{
-    background-color: rgb(56, 56, 240);
-    color: antiquewhite;
-    text-align: center;
-    padding: 10px;
-}
-
-h2{
-    text-align: center;
-    color: rgb(179, 82, 13);
+    font-family:Arial, Helvetica, sans-serif;
+    margin-top: 50px;
 }
 
 h3{
+    display: inline-block;
+    color: rgb(0, 0, 0);
+}
+#cont{
+    height: 200px;
+    width: 100%;
+    margin: auto;
+    margin-bottom: 10px;
+    
+}
+
+#style{
+    height: 200px;
+    width: 200px;
     text-align: center;
+    margin: auto;
+    margin-bottom: 10px;
+    background-color: rgb(183, 240, 240);
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 15px;
 }
 
-label{
-    font-size: large;
-    font-weight: bolder;
-    padding:10px;
-}
+.in{
+    margin: auto;
+    margin-top: -10px;
+    width: 90%;
+    text-align: center;
 
-input[type="number"]{
-    border: 0px;
-    height: 24px;
-    border-radius: 3px;
 }
 
 input[type="button"]{
-    margin: 10px 40%;
-    border: 1px solid brown;
+    margin-left: 10px;
+    color: white;
+    background-color: gray;
     border-radius: 5px;
-    padding: 5px 20px;
-    width: 20%;
-    background-color: rgb(255, 171, 146);
-    font-weight: bolder;
-
-}
-
-#cal{
-text-align: center;
-}
-#box{
-    margin: auto 10%;
-    background-color: bisque;
-    padding: 10px 20px;
+    padding: 3px 10px;
+    font-size: medium;
+    font-weight: bold;
 }
